--- a/slides/slides.latex
+++ b/slides/slides.latex
@@ -85,7 +85,7 @@
 \definecolor{cexcolor}{rgb}{0.25,0.25,0.4}
 \lstset{
   basicstyle=\footnotesize\ttfamily,
-  language=Ruby,
+  language=TeX,
   morekeywords={make-instance},
   escapeinside={\%*}{*)},
   commentstyle=\itshape\color{commentcolor},
@@ -181,6 +181,29 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\begin{slide}
+  \h{Basic Text Formatting}
+
+\begin{lstlisting}
+\b{Bold text!}
+\it{Italic text!}
+\b{\it{Commands can nest!  Bold and italic text!}}
+\s{Strike through}
+\u{Underlined text}
+\tt{Teletype-style text}
+\sub{subscripts}
+\sup{superscripts}
+\big{bigger text}
+\small{smaller text}
+
+New paragraphs are started by a blank line.
+Whitespace is      usually     ignored.
+Non-breaking spaces via \_.
+\_{8} will give you 8 non-breaking spaces.
+\end{lstlisting}
+\end{slide}
 
 
 \begin{slide}
