--- a/slides/slides.latex
+++ b/slides/slides.latex
@@ -84,7 +84,7 @@
 \definecolor{keywordcolor}{rgb}{0.1,0.5,0.1}
 \definecolor{cexcolor}{rgb}{0.25,0.25,0.4}
 \lstset{
-  basicstyle=\footnotesize\ttfamily,
+  basicstyle=\ttfamily,
   language=TeX,
   morekeywords={make-instance},
   escapeinside={\%*}{*)},
@@ -193,6 +193,15 @@
 
 
 \begin{slide}
+  \h{It's called Thinking Bicycle.com}
+
+  \includegraphics[height=2in
+  ]{thinker.eps}
+  \includegraphics[height=2in]{bicycle.eps}
+\end{slide}
+
+
+\begin{slide}
   \h{Like all websites, it's eternally under construction.}
 
   \fullSlideImage{under-construction.eps}
@@ -202,23 +211,35 @@
 \begin{slide}
   \h{Basic Text Formatting}
 
-\begin{lstlisting}
-\b{Bold text!}
-\it{Italic text!}
-\b{\it{Commands can nest!  Bold and italic text!}}
-\s{Strike through}
-\u{Underlined text}
-\tt{Teletype-style text}
-\sub{subscripts}
-\sup{superscripts}
-\big{bigger text}
-\small{smaller text}
+  \textbf{Bold text:}
+  \lstinline!\b{bold text}!
 
-New paragraphs are started by a blank line.
-Whitespace is      usually     ignored.
-Non-breaking spaces via \_.
-\_{8} will give you 8 non-breaking spaces.
-\end{lstlisting}
+  \textit{Italic text:}
+  \lstinline!\it{italic text}!
+
+  \textit{\textbf{Commands can nest:}}
+  \lstinline!\it{\b{commands can nest}}!
+
+  \sout{Strike through text:}
+  \lstinline!\s{strike through}!
+
+  \underline{Underlined text:}
+  \lstinline!\u{underlined text}!
+
+  \texttt{Teletype-style text:}
+  \lstinline!\tt{teletype-style text}!
+
+  Sub\textsubscript{scripts}:
+  \lstinline!sub\sub{scripts}!
+
+  Super\textsuperscript{scripts}:
+  \lstinline!super\sup{scripts}!
+
+  {\large Bigger} text:
+  \lstinline!\big{bigger} text!
+
+  {\small Smaller} text:
+  \lstinline!\small{smaller} text!
 \end{slide}
 
 
