--- a/slides/slides.latex
+++ b/slides/slides.latex
@@ -259,6 +259,13 @@
 
 
 \begin{slide}
+  \h{But we can't make a real AI!}
+
+  \fullSlideImage{yes-we-khan.eps}
+\end{slide}
+
+
+\begin{slide}
   \h{I've started from scratch three times with this project, but I think I'm on the right track now.}
 
   \fullSlideImage{third-try.eps}
